<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <packaging>pom</packaging>
    <modules>
        <module>vertx-jooq-shared</module>
        <module>vertx-jooq-classic</module>
        <module>vertx-jooq-classic-jdbc</module>
        <module>vertx-jooq-rx</module>
        <module>vertx-jooq-rx3</module>
        <module>vertx-jooq-rx-jdbc</module>
        <module>vertx-jooq-generate</module>
        <module>vertx-jooq-classic-reactive</module>
        <module>vertx-jooq-shared-reactive</module>
        <module>vertx-jooq-rx-reactive</module>
        <module>vertx-jooq-rx3-reactive</module>
        <module>vertx-jooq-rx3-jdbc</module>
    </modules>
    <properties>
        <jooq.version>3.15.5</jooq.version>
        <vertx.version>4.2.3</vertx.version>
        <jackson.databind.version>2.13.1</jackson.databind.version>
        <hsqldb.version>2.6.1</hsqldb.version>
        <junit.version>4.13.2</junit.version>
        <guice.version>4.2.3</guice.version>
        <logback.version>1.2.10</logback.version>
        <rx.version>2.2.21</rx.version>
        <rx3.version>3.0.13</rx3.version>
        <mysql.driver.version>8.0.25</mysql.driver.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <postgresql.driver.version>42.3.1</postgresql.driver.version>
        <java.version>11</java.version>
        <maven.compiler.release>11</maven.compiler.release>
    </properties>
    <groupId>io.github.jklingsporn</groupId>
    <version>6.4.0</version>
    <artifactId>vertx-jooq</artifactId>
    <name>${project.groupId}:${project.artifactId}</name>
    <description>A jOOQ-CodeGenerator to create vertxified DAOs and POJOs</description>
    <url>https://github.com/jklingsporn/vertx-jooq</url>
    <developers>
        <developer>
            <name>Jens Klingpsorn</name>
            <email>jens.klingsporn@gmail.com</email>
            <organizationUrl>https://github.com/jklingsporn</organizationUrl>
        </developer>
    </developers>
    <licenses>
        <license>
            <name>MIT License</name>
            <url>https://raw.githubusercontent.com/jklingsporn/vertx-jooq/master/LICENSE</url>
        </license>
    </licenses>
    <dependencies>
        <dependency>
            <groupId>io.vertx</groupId>
            <artifactId>vertx-core</artifactId>
            <version>${vertx.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${jackson.databind.version}</version>
        </dependency>
        <dependency>
            <groupId>org.jooq</groupId>
            <artifactId>jooq</artifactId>
            <version>${jooq.version}</version>
        </dependency>
        <!-- Test-scope dependencies-->
        <dependency>
            <groupId>org.hsqldb</groupId>
            <artifactId>hsqldb</artifactId>
            <version>${hsqldb.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>${mysql.driver.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.google.inject</groupId>
            <artifactId>guice</artifactId>
            <version>${guice.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${logback.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <version>${postgresql.driver.version}</version>
            <scope>test</scope>
        </dependency>

    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <release>11</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.0.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M5</version>
            </plugin>
        </plugins>
    </build>
    <profiles>
        <profile>
            <id>release</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>3.3.1</version>
                        <executions>
                            <execution>
                                <id>attach-javadocs</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>3.0.1</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <keyname>${gpg.keyname}</keyname>
                            <passphraseServerId>${gpg.keyname}</passphraseServerId>
                            <executable>gpg2</executable>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
    <scm>
        <connection>scm:git:git://github.com/jklingsporn/vertx-jooq.git</connection>
        <developerConnection>scm:git:git@github.com/jklingsporn/vertx-jooq.git</developerConnection>
        <url>https://github.com/jklingsporn/vertx-jooq</url>
    </scm>
    <distributionManagement>
        <repository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
        </repository>
    </distributionManagement>
</project>
